--- a/static/stat661/hw_stat661.Rmd
+++ b/static/stat661/hw_stat661.Rmd
@@ -10,15 +10,19 @@ header-includes:
  - \usepackage{multicol}
  - \usepackage{multirow}
  - \usepackage{caption}
+ - \usepackage{fancyhdr}
+ - \pagestyle{fancy}
+ - \fancyhf{}
+ - \rhead{Shen Qu}
+ - \lhead{Homework}
+ - \chead{STAT 661}
+ - \rfoot{Page \thepage}
 ---
 
 
 
 # {.tabset .tabset-fade .tabset-pills}
 
-\begin{flushright}STAT 661\\
-Shen Qu
-\end{flushright}
 
 ## HW1
 
@@ -277,13 +281,31 @@ $\sum_{i=1}^n X_i$ form a one-parameter exponential family.
    \underbrace{ \prod_{i=1}^n\mathbf{1}_{\{x\in(0,1,2,..)\}}}_{h(x)}
 \end{align*}
 
-Thus, $\sum_{i=1}^n X_i$ is a one-parameter exponential family.
+Thus, $\sum_{i=1}^n X_i$ is a sufficient statistic for $\theta$. $P_\theta(\sum_{i=1}^n X_i=x)$ is a one-parameter exponential family.
 
 (c) Show that $\sum_{i=1}^n X_i$ in part (b) has a negative binomial distribution with parameters $(n,\theta)$ defined by $P_\theta[\sum_{i=1}^nX_i=k] = \binom{n+k-1}{k}(1-\theta)^k\theta^n, k = 0, 1, 2,..$
-
 (The negative binomial distribution is that of the number of failures before the nth success in a sequence of Bernoulli trials with probability of success $\theta$.)
+Hint: By Theorem 1.6.1, $P_\theta[\sum_{i=1}^nX_i=k] = c_k(1-\theta)^k\theta^n, 0 <\theta <1$. If $\sum_{k=0}^{\infty}c_k\omega^k =\frac1{(1- \omega)^n} , 0 <\omega< 1$, then $c_k=\left.\frac1{k!}\frac{d^k}{d\omega^k} (1-\omega)^{-n}\right|_{\omega=0}$
 
-Hint: By Theorem 1.6.1, $P_\theta[\sum_{i=1}^nX_i=k] = c_k(1-\theta)^k\theta^n, 0 <\theta <1$. If $\sum_{k=0}^{\infty}c_k\omega^k =1(1- \omega)^n , 0 <\omega< 1$, then $c_k=\left.\frac1{k!}\frac{dk}{d\omega^k} (1-\omega)^{-n}\right|_\omega=0$
+In part (b), $P_\theta(\sum_{i=1}^n X_i=k)=(1-\theta)^k\theta^n$. 
+
+To find p.m.f of this distribution, let $\sum_{k=1}^n c_k(1-\theta)^k\theta^n=1, 0 <\theta <1$
+
+let $\omega=1-\theta$, $\sum_{k=1}^n c_k\omega^k=\theta^{-n}, 0 <\omega <1$, then $c_k=\left.\frac1{k!}\frac{d^k}{d\omega^k} (1-\omega)^{-n}\right|_{\omega=0}$
+
+\begin{align*}
+   \frac{d'}{d\omega'} (1-\omega)^{-n}&=(-n)(-1)(1-\omega)^{-n-1}=n(1-\omega)^{-n-1}\\
+   \frac{d^2}{d\omega^2} (1-\omega)^{-n}&=(-n-1)(-1)n(1-\omega)^{-n-2}=(n+1)n(1-\omega)^{-n-2}\\
+   \cdots\\
+   \frac{d^k}{d\omega^k} (1-\omega)^{-n}&=(-n-k+1)(-1)\cdots(n+1)n(1-\omega)^{-n-k+1}=[\prod_{i=0}^{k-1}(n+i)](1-\omega)^{-n-k+1}\\
+   \left.\frac{d^k}{d\omega^k} (1-\omega)^{-n}\right|_{\omega=0} & =\prod_{i=0}^{k-1}(n+i)
+\end{align*}
+
+$c_k=\left.\frac1{k!}\frac{d^k}{d\omega^k} (1-\omega)^{-n}\right|_{\omega=0}=\frac1{k!}\prod_{i=0}^{k-1}(n+i)=\frac{(n+k-1)!}{k!(n-1)!}=\binom{n+k-1}{k}$
+
+
+Therefore, 
+$P_\theta[\sum_{i=1}^nX_i=k] = \binom{n+k-1}{k}(1-\theta)^k\theta^n, k = 0, 1, 2,..$
 
 
 ### 1.6-5 Show that the following families of distributions are two-parameter exponential families and identify the functions $\eta$,$B$,$T$, and $h$.
@@ -372,13 +394,13 @@ Genotype & SS & II & FF & SI & SF & IF \\
 Probability & $\theta^2_1$ & $\theta^2_2$ & $\theta^2_3$ & $2\theta_1\theta_2$ & $2\theta_1\theta_3$ & $2\theta_2\theta_3$ \\
 \end{tabular}
 
-Let $N_j$ be the number of plants of genotype $j$ in a sample of n independentplants, $1\le j\le 6$ and let$\hat p_j = N_j/n$. 
+Let $N_j$ be the number of plants of genotype $j$ in a sample of n independent plants, $1\le j\le 6$ and let$\hat p_j = N_j/n$. 
 Show that 
 
 \begin{align*}
-\hat\theta_1 = \hat p_1 + 1 2\hat p_4 + 1 2\hat p_5 \\
-\hat\theta_2 = \hat p_2 + 1 2\hat p_4 + 1 2\hat p_6 \\
-\hat\theta_3 = \hat p_3 + 1 2\hat p_5 + 1 2\hat p_6
+\hat\theta_1 = \hat p_1 + \frac12\hat p_4 + \frac12\hat p_5 \\
+\hat\theta_2 = \hat p_2 + \frac12\hat p_4 + \frac12\hat p_6 \\
+\hat\theta_3 = \hat p_3 + \frac12\hat p_5 + \frac12\hat p_6
 \end{align*}
 
 are frequency plug-in estimates of $\theta_1, \theta_2$, and $\theta_3$.
@@ -386,11 +408,11 @@ are frequency plug-in estimates of $\theta_1, \theta_2$, and $\theta_3$.
 ## HW4 
 
 ### 2.2-12 Let $X_1,..,X_n, n \ge2$, be independently and identically distributed with density
-$f(x,\theta)=\frac1 \sigma\exp[-\frac{x-\mu}\sigma], x \ge \mu$, where $\theta = (\mu,\sigma2),-\infty < \mu <\infty, \sigma^2 > 0$. 
+$f(x,\theta)=\frac1 \sigma\exp[-\frac{x-\mu}\sigma], x \ge \mu$, where $\theta = (\mu,\sigma^2),-\infty < \mu <\infty, \sigma^2 > 0$. 
 
-(a) Find maximum likelihood estimates of $\mu$ and $\sigma2$.
+(a) Find maximum likelihood estimates of $\mu$ and $\sigma^2$.
 
-(b) Find the maximum likelihood estimate of $P_\theta[X_1 \ge t] for t > \mu$. Hint: You may use Problem 2.2.16(b). 
+(b) Find the maximum likelihood estimate of $P_\theta[X_1 \ge t]$ for $t > \mu$. Hint: You may use Problem 2.2.16(b). 
 
 ### 2.2-13 Let $X_1,...,X_n$ be a sample from a$U[\theta-\frac1 2,\theta+\frac1 2]$ distribution. 
 Show that any T such that $X_{(n)} - \frac1 2 \le T \le X_{(1)} + \frac1 2$ is a maximum likelihood estimate of $\theta$. (We write $U[a,b]$ to make $p(a)=p(b)=(b-a)^{-1}$ rather than $0$.)
@@ -403,13 +425,13 @@ Let $\Theta = \{(\theta_1,\theta_2) : \theta_1 > 0,\theta_2 > 0,\theta_1 + \thet
 
 ### 2.3-12  Let $X_1,..,X_n$ be i.i.d. $\frac1\sigma f_0(\frac{x-\mu}\sigma)$, $\sigma>0, \mu\in R$, and assume for $w \equiv-\log f_0$ that $\omega''>0$ so that w is strictly convex, $\omega(\pm\infty) = \infty$. 
 
-(a) Show that, if $n \ge 2$, the likelihood equations $\sum^n_{i=1} w'(\frac(X_i-\mu)\sigma)= 0$
+(a) Show that, if $n \ge 2$, the likelihood equations $\sum^n_{i=1} w'(\frac{X_i-\mu}\sigma)= 0$
 
 $\sum^n_{i=1}[\frac{(X_i-\mu)}\sigma w'(\frac{X_i-\mu}\sigma)-1]= 0$ have a unique solution $(\hat\mu,\hat\sigma)$. 
 
 (b) Give an algorithm such that starting at $\hat\mu^0=0,\hat\sigma^0=1,\hat\mu^{(i)}\to\hat\mu,\hat\sigma^{(i)}\to\hat\sigma$. 
 
-(c) Show that for the logistic distribution $F_0(x) = [1 + \exp{\{-x\}}]{-1}$, w is strictly convex and give the likelihood equations for $\mu$ and $\sigma$. (See Example 2.4.3.) 
+(c) Show that for the logistic distribution $F_0(x) = [1 + \exp{\{-x\}}]^{-1}$, w is strictly convex and give the likelihood equations for $\mu$ and $\sigma$. (See Example 2.4.3.) 
 
 Hint: 
 
@@ -433,9 +455,9 @@ Hint:
 ### 2.4-6 Consider a genetic trait that is directly unobservable but will cause a disease among a certain proportion of the individuals that have it. 
 For families in which one member has the disease, it is desired to estimate the proportion $\theta$ that has the genetic trait. Suppose that in a family of n members in which one has the disease (and, thus, also the trait), X is the number of members who have the trait. Because it is known that $X\ge1$, the model often used for X is that it has the conditional distribution of a $\mathcal{B}(n,\theta)$ variable, $\theta \in [0,1]$, given $X \ge 1$. 
 
-(a) Show that $P(X = x | X \ge 1) = n xx(1-\theta)n-x 1-(1-\theta)n , x = 1,...,n$, and that the MLE exists and is unique.
+(a) Show that $P(X = x | X \ge 1) =\frac{\binom{n}{x}\theta^x(1-\theta)^{n-x}}{1-(1-\theta)^n}, x=1,..,n$, and that the MLE exists and is unique.
 
 (b) Use (2.4.3) to show that the Newton-Raphson algorithm gives $\hat\theta_1 =\tilde\theta- \frac{\tilde\theta(1-\tilde\theta)[1-(1-\tilde\theta)^n]\{x-n\tilde\theta-x(1-\tilde\theta)^n\}}{ n\tilde\theta^2(1-\tilde\theta)^n[n-1 + (1-\tilde\theta)^n]-[1-(1-\tilde\theta)^n]^2[(1-2\tilde\theta)x + n\tilde\theta^2]}$
-,where $\tilde\theta =\hat\theta$ old and $\hat\theta1 = \hat\theta$new, as the ﬁrst approximation to the maximum likelihood estimate of $\theta$.
+,where $\tilde\theta =\hat\theta_{old}$  and $\hat\theta_1 = \hat\theta_{new}$, as the ﬁrst approximation to the maximum likelihood estimate of $\theta$.
 
-(c) If $n = 5, x = 2$, ﬁnd$\hat\theta1$ of (b) above usinge $\theta = x/n$ as a preliminary estimate.
+(c) If $n = 5, x = 2$, ﬁnd$\hat\theta_1$ of (b) above usinge $\theta = x/n$ as a preliminary estimate.
